--- a/src/componentes/CampoTexto/CampoText.css
+++ b/src/componentes/CampoTexto/CampoText.css
@@ -9,8 +9,8 @@
 }
 
 .campo-texto input {
-    background-color: white;
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0, 0.0);
+    background-color: #FFF;
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.08);
     width: 100%;
     border: none;
     font-size: 24px;
